--- a/requirements.txt
+++ b/requirements.txt
@@ -1,128 +1,3 @@
-altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1640799537051/work
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.11.1
-bleach==5.0.0
-blinker==1.4
-branca @ file:///home/conda/feedstock_root/build_artifacts/branca_1650311966802/work
-brotlipy @ file:///D:/bld/brotlipy_1648854320485/work
-cachetools==5.0.0
-certifi==2021.10.8
-cffi @ file:///D:/bld/cffi_1636046293990/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1644853463426/work
-click==8.0.4
-click-plugins==1.1.1
-cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1633637764473/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
-cryptography @ file:///D:/bld/cryptography_1649035416420/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-debugpy==1.6.0
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.3
-Fiona==1.8.21
-folium @ file:///home/conda/feedstock_root/build_artifacts/folium_1638560701663/work
-fonttools @ file:///D:/bld/fonttools_1650674434525/work
-GDAL==3.4.2
-geopandas @ file:///home/conda/feedstock_root/build_artifacts/geopandas_1638382567988/work
-gitdb==4.0.9
-GitPython==3.1.27
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1642433548627/work
-importlib-metadata==4.11.3
-importlib-resources==5.7.1
-ipykernel==6.13.0
-ipython==8.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.0
-jedi==0.18.1
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1648299710939/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1633637554808/work
-jsonschema==4.4.0
-jupyter-client==7.3.0
-jupyter-core==4.10.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.0
-kiwisolver @ file:///D:/bld/kiwisolver_1648854542949/work
-mapclassify @ file:///home/conda/feedstock_root/build_artifacts/mapclassify_1627363180059/work
-MarkupSafe @ file:///D:/bld/markupsafe_1648737751065/work
-matplotlib @ file:///D:/bld/matplotlib-suite_1639359275746/work
-matplotlib-inline==0.1.3
-mistune==0.8.4
-munch==2.5.0
-munkres==1.1.4
-nbclient==0.6.0
-nbconvert==6.5.0
-nbformat==5.3.0
-nest-asyncio==1.5.5
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1649567584534/work
-notebook==6.4.11
-numpy @ file:///D:/bld/numpy_1649572837703/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
-pandas @ file:///D:/bld/pandas_1649588098146/work
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow @ file:///D:/bld/pillow_1649818154638/work
-pipreqs==0.4.11
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-protobuf==3.20.1
-psutil==5.9.0
-pure-eval==0.2.2
-pyarrow==7.0.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pydeck==0.7.1
-Pygments==2.12.0
-Pympler==1.0.1
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1643496850550/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1649603503565/work
-pyproj @ file:///D:/bld/pyproj_1650803275523/work
-pyrsistent==0.18.1
-PySocks @ file:///D:/bld/pysocks_1648857453381/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1647961439546/work
-pytz-deprecation-shim==0.1.0.post0
-pywin32==303
-pywinpty==2.0.5
-pyzmq==22.3.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1641580202195/work
-Rtree @ file:///D:/bld/rtree_1649367802780/work
-scikit-learn @ file:///D:/bld/scikit-learn_1640464350231/work
-scipy @ file:///C:/bld/scipy_1644357701081/work
-semver==2.13.0
-Send2Trash==1.8.0
-Shapely==1.8.1.post1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-smmap==5.0.0
-soupsieve==2.3.2.post1
-stack-data==0.2.0
+numpy==1.22.3
+pandas==1.4.2
 streamlit==1.8.1
-streamlit-folium==0.6.7
-terminado==0.13.3
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
-tinycss2==1.1.1
-toml==0.10.2
-toolz==0.11.2
-tornado==6.1
-traitlets==5.1.1
-tzdata==2022.1
-tzlocal==4.2
-unicodedata2 @ file:///D:/bld/unicodedata2_1649112097357/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1647489083693/work
-validators==0.18.2
-watchdog==2.1.7
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.6.0
-win-inet-pton @ file:///D:/bld/win_inet_pton_1648771891747/work
-wincertstore==0.2
-xyzservices @ file:///home/conda/feedstock_root/build_artifacts/xyzservices_1649934406482/work
-yarg==0.1.9
-zipp==3.8.0
